force-app/main/default/objects/ReturnRequest__c/ReturnRequest__c.object-meta.xml
<CustomObject>
    <description>A customer request to return an order or line item. Outcome is decided by the Phase 3 deterministic gate.</description>
    <label>Return Request</label>
    <nameField>
        <label>Return Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Return Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>