force-app/main/default/objects/ReturnRequest__c/fields/DecisionReason__c.field-meta.xml
<CustomField>
    <fullName>DecisionReason__c</fullName>
    <label>Decision Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>