force-app/main/default/objects/ReturnRequest__c/fields/EscalationCase__c.field-meta.xml
<CustomField>
    <fullName>EscalationCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Return Requests</relationshipLabel>
    <relationshipName>Return_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>