force-app/main/default/objects/ReturnRequest__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>OrderItem__c</referenceTo>
    <relationshipLabel>Return Requests</relationshipLabel>
    <relationshipName>Return_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>