force-app/main/default/objects/ReturnRequest__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Wrong item</fullName>
            </value>
            <value>
                <fullName>Not as described</fullName>
            </value>
            <value>
                <fullName>Changed mind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>